--- a/index.html
+++ b/index.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html dir="rtl" lang="ar">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>شمس</title>
   <link rel="stylesheet" href="assets/css/bootstrap.rtl.min.css" />
-  <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+  <!-- <link rel="stylesheet" href="assets/css/bootstrap.min.css" /> -->
   <link rel="stylesheet" href="assets/css/main.css" />
-  <link rel="stylesheet" href="assets/css/glide.core.min.css" />
+  <!-- <link rel="stylesheet" href="assets/css/glide.core.min.css" /> -->
   <!-- <link rel="stylesheet" href="assets/css/glide.theme.min.css" /> -->
+
+  <link rel="stylesheet" href="./assets/css/owl.carousel.min.css" />
+  <link rel="stylesheet" href="./assets/css/owl.theme.default.min.css" />
+
   <script defer src="./assets/js/icons.min.js"></script>
   <script defer src="./assets/js/main.js" type="module"></script>
   <script defer src="./assets/js/bootstrap.min.js" type="module"></script>
+
+  <script defer src="assets/js/jquery.min.js"></script>
+  <script defer src="assets/js/owl.carousel.min.js"></script>
 </head>
 
 <body>
@@ -161,191 +168,131 @@
       </div>
     </section>
     <section class="hero">
-      <div>
+      <div class="hero__banner">
         <img src="./assets/img/dynamic/slider-1.webp" alt="">
       </div>
-      <div class="glide">
         <div class="card">
-          .
-          <div class="glide__track" data-glide-el="track">
-            <ul class="glide__slides">
-              <li class="glide__slide">
+
+
+          <div id="hero__slide" class="carousel slide">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
                 <div class="hero__card-content">
-                <h3 class="hero__card-title">عن شمس</h3>
-                <p class="hero__card-description">المؤسسة العامة للمحافظة على للشعب المرجانية السلاحف في البحر الأحمر هي
-                  مؤسسة حكومية سعودية تأسست
-                  بموجب قرار مجلس
-                  الوزراء رقم (٢٥٠) بتاريخ ١٤٤٣/٠٤/٢٥ هجري و تهدف إلى التنظيم والإشراف والمحافظة على الشعب المرجانية
-                  والسلاحف</p>
+                  <h3 class="hero__card-title">عن شمس</h3>
+                  <p class="hero__card-description">المؤسسة العامة للمحافظة على للشعب المرجانية السلاحف في البحر الأحمر
+                    هي
+                    مؤسسة حكومية سعودية تأسست
+                    بموجب قرار مجلس
+                    الوزراء رقم (٢٥٠) بتاريخ ١٤٤٣/٠٤/٢٥ هجري و تهدف إلى التنظيم والإشراف والمحافظة على الشعب المرجانية
+                    والسلاحف</p>
                   <a href="#" class="hero__card-action">التفاصيل</a>
-                  </div>
-              </li>
-              <li class="glide__slide">
+                </div>
+              </div>
+              <div class="carousel-item">
                 <div class="hero__card-content">
-                <h3 class="hero__card-title">سلاحف البحر الأحمر</h3>
-                <p class="hero__card-description">عد السلاحف البحرية بلا شك من أبرز الحيوانات رمزية التي تميز الحياة
-                  البحرية في البحر الأحمر، حيث تُبدي روعة وغنى التنوع
-                  البيولوجي التي تزخر به هذا البيئة البحرية، حيث أن السلاحف تُجسد قوة التكيف والصمود في مواجهة التحديات
-                  المحيطية، بالإضافة
-                  إلى قدرتها عل</p>
+                  <h3 class="hero__card-title">سلاحف البحر الأحمر</h3>
+                  <p class="hero__card-description">عد السلاحف البحرية بلا شك من أبرز الحيوانات رمزية التي تميز الحياة
+                    البحرية في البحر الأحمر، حيث تُبدي روعة وغنى التنوع
+                    البيولوجي التي تزخر به هذا البيئة البحرية، حيث أن السلاحف تُجسد قوة التكيف والصمود في مواجهة
+                    التحديات
+                    المحيطية، بالإضافة
+                    إلى قدرتها عل</p>
                   <a href="#" class="hero__card-action">التفاصيل</a>
-                  </div>
-                </li>
-                <li class="glide__slide">
-                  <div class="hero__card-content">
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="hero__card-content">
                   <h3 class="hero__card-title">ما هي الشعب المرجانية؟</h3>
                   <p class="hero__card-description">
                     تعتبر الشعب المرجانية في البحر الأحمر مشهدًا ساحرًا ونظاماً بيئياً وبحرياً حيوياً بشكل استثنائي على
                     مستوى العالم. تتواجد
-                    هذه الشعب المدهشة على طول السواحل في عدة دول، وتقدم مشهدًا بديعًا يذهل العقول بألوانه الزاهية وأشكاله
+                    هذه الشعب المدهشة على طول السواحل في عدة دول، وتقدم مشهدًا بديعًا يذهل العقول بألوانه الزاهية
+                    وأشكاله
                     الفريدة
                   </p>
                   <a href="#" class="hero__card-action"><span>التفاصيل</span></a>
-                  </div>
-                </li>
-              </ul>
-            </div>
-            <div class="glide__arrows" data-glide-el="controls">
-              <div class="card main-slider__card">
-                <h3></h3>
+                </div>
+
               </div>
-            <button class="glide__arrow glide__arrow--left" data-glide-dir="<">prev</button>
-            <button class="glide__arrow glide__arrow--right" data-glide-dir=">">next</button>
-            <div class="glide__bullets" data-guide-el="controls[nav]">
-              <button class="glide__bullet" data-glide-dir="=0"></button>
-              <button class="glide__bullet" data-glide-dir="=1"></button>
             </div>
-          </div>
-        </div>
-      </div>
+            <div class="hero__slide-action">
+              <button class="hero__slide-control hero__slide-control--prev" type="button" data-bs-target="#hero__slide"
+                data-bs-slide="prev">
+                <i class="fa-solid fa-chevron-left hero__slide-icon"></i>
+              </button>
 
 
 
+              <div class="carousel-indicators">
+                <button type="button" data-bs-target="#hero__slide" data-bs-slide-to="0"
+                  class="bullets active" aria-current="true" aria-label="Slide 1">
+                  <i class="fa-solid fa-circle"></i>
+                </button>
+                <button type="button" data-bs-target="#hero__slide" data-bs-slide-to="1" class="bullets"
+                  aria-label="Slide 2">
+                  <i class="fa-solid fa-circle"></i>
+                </button>
+                <button type="button" data-bs-target="#hero__slide" data-bs-slide-to="2" class="bullets"
+                  aria-label="Slide 3">
+                  <i class="fa-solid fa-circle"></i>
+                </button>
+              </div>
 
 
 
-
-
-
-
-
-
-    <div id="heroCarousel" class="carousel slide">
-      <div class="carousel-indicators">
-        <button type="button" data-bs-target="#heroCarousel" data-bs-slide-to="0" class="active" aria-current="true"
-          aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#heroCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#heroCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
-      </div>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img playsinline src="assets/img/dynamic/slider-1.webp" alt="" class="intor-logo-bg"/>
-          <div class="carousel-caption">
-            <span class="cascade-effect cascade-effect-1">LEADING 1</span>
-            <h5 class="cascade-effect cascade-effect-2">innovation</h5>
-            <p class="cascade-effect cascade-effect-3">in water technology and research</p>
-          </div>
-          <div class="carousel-video">
-            <img playsinline src="assets/img/dynamic/slider-2.webp" alt="" class="intor-logo-bg" />
-            <div class="video">
-              <button class="play-btn" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                <img playsinline src="assets/img/dynamic/slider-3.webp" alt="" class="intor-logo-bg" />
-                <p>
-                  introductory video
-                </p>
+              <button class="hero__slide-control hero__slide-control--next" type="button" data-bs-target="#hero__slide"
+                data-bs-slide="next">
+                <i class="fa-solid fa-chevron-right hero__slide-icon"></i>
               </button>
             </div>
-            <!-- <div class="shape">
-                  <img src="assets/img/hero-slider/icon.png" alt="" />
-                </div> -->
           </div>
+
+
         </div>
-        <div class="carousel-item">
-          <img src="assets/img/slider/img01.jpg" class="w-100 d-block" />
-          <div class="carousel-caption">
-            <span>LEADING 2</span>
-            <h5>innovation</h5>
-            <p>in water technology and research</p>
-          </div>
-          <div class="carousel-video">
-            <div class="video">
-              <button class="play-btn" data-bs-toggle="modal" data-bs-target="#exampleModal1">
-                <img  src="assets/img/dynamic/slider-1.webp" alt="" class="intor-logo-bg" />
-              </button>
-              <p>
-                introductory <br />
-                video
-              </p>
-            </div>
-            <!-- <div class="shape">
-                  <img src="assets/img/slider/icon.png" alt="" />
-                </div> -->
-          </div>
+    </section>
+
+    <section class="links">
+      <div class="container">
+        <div class="links__slide">
+          <h3 class="links__slide-title">روابط مهمة</h3>
+
+                    <div class="links__slide-container">
+                      <div class="links__slide-item">
+                        <a target="_blank" href="#">
+                          <div class="links__slide-item-logo">
+                            <img src="assets/img/dynamic/logo-1.webp" alt="logo" />
+                          </div>
+                          <div class="links__slide-item-title">المديرية العامة لحرس الحدود</div>
+                        </a>
+                      </div>
+                      <div class="links__slide-item">
+                        <a target="_blank" href="#">
+                          <div class="links__slide-item-logo">
+                            <img src="assets/img/dynamic/logo-2.webp" alt="logo" />
+                          </div>
+                          <div class="links__slide-item-title">الهيئة السعودية للبحر الأحمر</div>
+                        </a>
+                      </div>
+                      <div class="links__slide-item">
+                        <a target="_blank" href="#">
+                          <div class="links__slide-item-logo">
+                            <img src="assets/img/dynamic/logo-3.webp" alt="logo" />
+                          </div>
+                          <div class="links__slide-item-title">جامعة الملك عبدالله للعلوم والتقنية</div>
+                        </a>
+                      </div>
+                      <div class="links__slide-item">
+                        <a target="_blank" href="#">
+                          <div class="links__slide-item-logo">
+                            <img src="assets/img/dynamic/logo-4.webp" alt="logo" />
+                          </div>
+                          <div class="links__slide-item-title">نيوم</div>
+                        </a>
+                      </div>
+                    </div>
+
         </div>
-        <div class="carousel-item">
-          <img src="assets/img/dynamic/slider-1.webp" alt="" class="intor-logo-bg" />
-          <div class="carousel-caption">
-            <span>LEADING 2</span>
-            <h5>innovation</h5>
-            <p>in water technology and research</p>
-          </div>
-          <div class="carousel-video">
-            <div class="video">
-              <button class="play-btn" data-bs-toggle="modal" data-bs-target="#exampleModal1">
-                <img src="assets/img/dynamic/slider-1.webp" alt="" class="intor-logo-bg" />
-              </button>
-              <p>
-                introductory <br />
-                video
-              </p>
-            </div>
-            <!-- <div class="shape">
-                  <img src="assets/img/slider/icon.png" alt="" />
-                </div> -->
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="assets/img/dynamic/slider-1.webp" alt="" class="intor-logo-bg" />
-          <div class="carousel-caption">
-            <span>LEADING 2</span>
-            <h5>innovation</h5>
-            <p>in water technology and research</p>
-          </div>
-          <div class="carousel-video">
-            <div class="video">
-              <button class="play-btn" data-bs-toggle="modal" data-bs-target="#exampleModal1">
-                <img src="assets/img/slider/video.svg" alt="" />
-              </button>
-              <p>
-                introductory <br />
-                video
-              </p>
-            </div>
-            <!-- <div class="shape">
-                  <img src="assets/img/slider/icon.png" alt="" />
-                </div> -->
-          </div>
-        </div>
-      </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#heroCarousel" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#heroCarousel" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
-    </div>
-
-
-
-
-
-
-
-
-
-
+        
     </section>
   </main>
 
@@ -663,7 +610,7 @@
   </footer>
   <script src="./assets/js/glide.min.js"></script>
   <script>
-    
+
   </script>
 
 </body>
