for eng mohamed eid

--- a/ceo.html
+++ b/ceo.html
@@ -159,145 +159,40 @@
     </div>
   </header>
 
-  <main>
-    <section>
-      <video src="./assets/img/dynamic/intro.mp4" class="video" autoplay muted loop id="intro-video"></video>
-      <div class="video__bar">
-        <span class="video__bar-total"></span>
-        <span class="video__bar--active"></span>
-      </div>
-    </section>
-    <section class="hero">
-      <div class="hero__banner">
-        <img src="./assets/img/dynamic/slider-1.webp" alt="">
-      </div>
-        <div class="card">
-
-
-          <div id="hero__slide" class="carousel slide">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <div class="hero__card-content">
-                  <h3 class="hero__card-title">عن شمس</h3>
-                  <p class="hero__card-description">المؤسسة العامة للمحافظة على للشعب المرجانية السلاحف في البحر الأحمر
-                    هي
-                    مؤسسة حكومية سعودية تأسست
-                    بموجب قرار مجلس
-                    الوزراء رقم (٢٥٠) بتاريخ ١٤٤٣/٠٤/٢٥ هجري و تهدف إلى التنظيم والإشراف والمحافظة على الشعب المرجانية
-                    والسلاحف</p>
-                  <a href="#" class="hero__card-action">التفاصيل</a>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <div class="hero__card-content">
-                  <h3 class="hero__card-title">سلاحف البحر الأحمر</h3>
-                  <p class="hero__card-description">عد السلاحف البحرية بلا شك من أبرز الحيوانات رمزية التي تميز الحياة
-                    البحرية في البحر الأحمر، حيث تُبدي روعة وغنى التنوع
-                    البيولوجي التي تزخر به هذا البيئة البحرية، حيث أن السلاحف تُجسد قوة التكيف والصمود في مواجهة
-                    التحديات
-                    المحيطية، بالإضافة
-                    إلى قدرتها عل</p>
-                  <a href="#" class="hero__card-action">التفاصيل</a>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <div class="hero__card-content">
-                  <h3 class="hero__card-title">ما هي الشعب المرجانية؟</h3>
-                  <p class="hero__card-description">
-                    تعتبر الشعب المرجانية في البحر الأحمر مشهدًا ساحرًا ونظاماً بيئياً وبحرياً حيوياً بشكل استثنائي على
-                    مستوى العالم. تتواجد
-                    هذه الشعب المدهشة على طول السواحل في عدة دول، وتقدم مشهدًا بديعًا يذهل العقول بألوانه الزاهية
-                    وأشكاله
-                    الفريدة
-                  </p>
-                  <a href="#" class="hero__card-action"><span>التفاصيل</span></a>
-                </div>
-
-              </div>
-            </div>
-            <div class="hero__slide-action">
-              <button class="hero__slide-control hero__slide-control--prev" type="button" data-bs-target="#hero__slide"
-                data-bs-slide="prev">
-                <i class="fa-solid fa-chevron-left hero__slide-icon"></i>
-              </button>
-
-
-
-              <div class="carousel-indicators">
-                <button type="button" data-bs-target="#hero__slide" data-bs-slide-to="0"
-                  class="bullets active" aria-current="true" aria-label="Slide 1">
-                  <i class="fa-solid fa-circle"></i>
-                </button>
-                <button type="button" data-bs-target="#hero__slide" data-bs-slide-to="1" class="bullets"
-                  aria-label="Slide 2">
-                  <i class="fa-solid fa-circle"></i>
-                </button>
-                <button type="button" data-bs-target="#hero__slide" data-bs-slide-to="2" class="bullets"
-                  aria-label="Slide 3">
-                  <i class="fa-solid fa-circle"></i>
-                </button>
-              </div>
-
-
-
-              <button class="hero__slide-control hero__slide-control--next" type="button" data-bs-target="#hero__slide"
-                data-bs-slide="next">
-                <i class="fa-solid fa-chevron-right hero__slide-icon"></i>
-              </button>
-            </div>
-          </div>
-
-
-        </div>
-    </section>
-
-    <section class="links">
-      <div class="container">
-        <div class="links__slide">
-          <h3 class="links__slide-title">روابط مهمة</h3>
-                    <div class="links__slide-container owl-carousel">
-                      <div class="links__slide-item">
-                        <a target="_blank" href="#">
-                          <div class="links__slide-item-logo">
-                            <img src="assets/img/dynamic/logo-1.webp" alt="logo" />
-                          </div>
-                          <div class="links__slide-item-title">المديرية العامة لحرس الحدود</div>
-                        </a>
-                      </div>
-                      <div class="links__slide-item">
-                        <a target="_blank" href="#">
-                          <div class="links__slide-item-logo">
-                            <img src="assets/img/dynamic/logo-2.webp" alt="logo" />
-                          </div>
-                          <div class="links__slide-item-title">الهيئة السعودية للبحر الأحمر</div>
-                        </a>
-                      </div>
-                      <div class="links__slide-item">
-                        <a target="_blank" href="#">
-                          <div class="links__slide-item-logo">
-                            <img src="assets/img/dynamic/logo-3.webp" alt="logo" />
-                          </div>
-                          <div class="links__slide-item-title">جامعة الملك عبدالله للعلوم والتقنية</div>
-                        </a>
-                      </div>
-                      <div class="links__slide-item">
-                        <a target="_blank" href="#">
-                          <div class="links__slide-item-logo">
-                            <img src="assets/img/dynamic/logo-4.webp" alt="logo" />
-                          </div>
-                          <div class="links__slide-item-title">نيوم</div>
-                        </a>
-                      </div>
-                    </div>
-
-        </div>
-        
-    </section>
-
+  <main class="ceo">
+    <h1 class="ceo__title">كلمة الرئيس التنفيذي</h1>
     <section class="pattern">
       <video src="./assets/img/dynamic/intro.mp4" class="pattern__video" autoplay muted></video>
       <img src="./assets/img/dynamic/pattern.svg" alt="">
     </section>
+    <div class="ceo__details">
+      <div class="ceo__img">
+        <img src="./assets/img/dynamic/ceo.webp" alt="ceo" />
+      </div>
+      <div class="ceo__name">
+        <h2>د.خالد بن محمد جميل اصفهاني</h2>
+      </div>
+      <div class="ceo__role">
+        <h3>الرئيس التنفيذي</h3>
+      </div>
+    </div>
+    <div class="container">
+      <div class="ceo__description">
+        <p>وضعت المؤسّسة نُصب أعينها بناء كيان راسخ وقادر على تحقيق التميّز في المحافظة على الشُّعب المُرجانية والسلاحف البحرية،
+        وأن يغدو اسم المملكة العربية السعوديّة مميّزا على الخارطة العالميّة في مجالات المحافظة على الشُّعب المرجانيّة والسلاحف،
+        والتخطيط للبرامج والمشاريع وَفق أفضل الممارسات العالميّة، وتنفيذها بأعلى المعايير العالميّة.
+      
+        حيث توجّهت المؤسّسة إلى دراسة الوضع الراهن لحالة الشُّعب المرجانية والسلاحف في البحر الأحمر وتشخيصها، وقامت بتحديد
+        مجموعة من الدراسات والمشاريع ذات المكاسب السريعة والأولويّة القصوى، وذلك للحدّ من تدهور بيئة السلاحف، وأنظمة الشُّعب
+        المرجانية في البحر الأحمر.
+
+    كما تركز المؤسّسة على بناء الحلول والتقنيات المبتكرة وتطويرها وتنفيذها لمراقبة حالة الشعب المرجانية والسلاحف البحرية
+    وطرق معاينتها وإعادة تأهيلها، وتعتزم المملكة من خلال المؤسّسة تنفيذ العديد من البرامج للمحافظة عليها وتنميتها في البحر
+    الأحمر، ويتجاوز طموحُنا المحافظةَ على ما تبقى من الشعب المرجانية في البحر الأحمر ومناطق تكاثر السلاحف إلى التوسّع في
+    إعادة تأهيل بيئة الشعب المرجانية المتضرّرة، ومواقع تكاثر السلاحف إلى حالتها الطبيعيّة.
+      </p>
+      </div>
+    </div>
   </main>
 
   <footer class="footer-container">
