--- a/index.html
+++ b/index.html
@@ -255,40 +255,53 @@
       <div class="container">
         <div class="links__slide">
           <h3 class="links__slide-title">روابط مهمة</h3>
-                    <div class="links__slide-container owl-carousel">
-                      <div class="links__slide-item">
-                        <a target="_blank" href="#">
-                          <div class="links__slide-item-logo">
-                            <img src="assets/img/dynamic/logo-1.webp" alt="logo" />
-                          </div>
-                          <div class="links__slide-item-title">المديرية العامة لحرس الحدود</div>
-                        </a>
-                      </div>
-                      <div class="links__slide-item">
-                        <a target="_blank" href="#">
-                          <div class="links__slide-item-logo">
-                            <img src="assets/img/dynamic/logo-2.webp" alt="logo" />
-                          </div>
-                          <div class="links__slide-item-title">الهيئة السعودية للبحر الأحمر</div>
-                        </a>
-                      </div>
-                      <div class="links__slide-item">
-                        <a target="_blank" href="#">
-                          <div class="links__slide-item-logo">
-                            <img src="assets/img/dynamic/logo-3.webp" alt="logo" />
-                          </div>
-                          <div class="links__slide-item-title">جامعة الملك عبدالله للعلوم والتقنية</div>
-                        </a>
-                      </div>
-                      <div class="links__slide-item">
-                        <a target="_blank" href="#">
-                          <div class="links__slide-item-logo">
-                            <img src="assets/img/dynamic/logo-4.webp" alt="logo" />
-                          </div>
-                          <div class="links__slide-item-title">نيوم</div>
-                        </a>
-                      </div>
+          <div class="row d-flex justify-content-center">
+            <div class="col-12 col-lg-11">
+              <div class="links__slide-container owl-carousel">
+                <div class="links__slide-item">
+                  <a target="_blank" href="#">
+                    <div class="links__slide-item-logo">
+                      <img src="assets/img/dynamic/logo-1.webp" alt="logo" />
                     </div>
+                    <div class="links__slide-item-title">المديرية العامة لحرس الحدود</div>
+                  </a>
+                </div>
+                <div class="links__slide-item">
+                  <a target="_blank" href="#">
+                    <div class="links__slide-item-logo">
+                      <img src="assets/img/dynamic/logo-2.webp" alt="logo" />
+                    </div>
+                    <div class="links__slide-item-title">الهيئة السعودية للبحر الأحمر</div>
+                  </a>
+                </div>
+                <div class="links__slide-item">
+                  <a target="_blank" href="#">
+                    <div class="links__slide-item-logo">
+                      <img src="assets/img/dynamic/logo-3.webp" alt="logo" />
+                    </div>
+                    <div class="links__slide-item-title">جامعة الملك عبدالله للعلوم والتقنية</div>
+                  </a>
+                </div>
+                <div class="links__slide-item">
+                  <a target="_blank" href="#">
+                    <div class="links__slide-item-logo">
+                      <img src="assets/img/dynamic/logo-4.webp" alt="logo" />
+                    </div>
+                    <div class="links__slide-item-title">نيوم</div>
+                  </a>
+                </div>
+                <div class="links__slide-item">
+                  <a target="_blank" href="#">
+                    <div class="links__slide-item-logo">
+                      <img src="assets/img/dynamic/logo-4.webp" alt="logo" />
+                    </div>
+                    <div class="links__slide-item-title">نيوم</div>
+                  </a>
+                </div>
+              </div>
+
+            </div>
+          </div>
 
         </div>
         
