edit js for slider

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <span class="drop-icon">
               <i class="fa-solid fa-chevron-down"></i>
             </span>
-            </>
+          </div>
         </li>
         <li class="header__nav-item">
           <div>
@@ -148,10 +148,10 @@
           <a href="#">تواصل معنا</a>
         </li>
         <a class="header__menu-lang" href="#">
-          <span>English<span />
+          <span>English</span>
         </a>
         <a class="header__tender header__tender--menu" href="#">
-          <span class="header__tender-text">المنافسات<span />
+          <span class="header__tender-text">المنافسات</span>
         </a>
       </ul>
     </div>
@@ -168,87 +168,100 @@
       </div>
     </section>
     <section class="hero">
+
       <div class="hero__banner">
-        <img src="./assets/img/dynamic/slider-1.webp" alt="">
-      </div>
-        <div class="card">
-
-
-          <div id="hero__slide" class="carousel slide">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <div class="hero__card-content">
-                  <h3 class="hero__card-title">عن شمس</h3>
-                  <p class="hero__card-description">المؤسسة العامة للمحافظة على للشعب المرجانية السلاحف في البحر الأحمر
-                    هي
-                    مؤسسة حكومية سعودية تأسست
-                    بموجب قرار مجلس
-                    الوزراء رقم (٢٥٠) بتاريخ ١٤٤٣/٠٤/٢٥ هجري و تهدف إلى التنظيم والإشراف والمحافظة على الشعب المرجانية
-                    والسلاحف</p>
-                  <a href="#" class="hero__card-action">التفاصيل</a>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <div class="hero__card-content">
-                  <h3 class="hero__card-title">سلاحف البحر الأحمر</h3>
-                  <p class="hero__card-description">عد السلاحف البحرية بلا شك من أبرز الحيوانات رمزية التي تميز الحياة
-                    البحرية في البحر الأحمر، حيث تُبدي روعة وغنى التنوع
-                    البيولوجي التي تزخر به هذا البيئة البحرية، حيث أن السلاحف تُجسد قوة التكيف والصمود في مواجهة
-                    التحديات
-                    المحيطية، بالإضافة
-                    إلى قدرتها عل</p>
-                  <a href="#" class="hero__card-action">التفاصيل</a>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <div class="hero__card-content">
-                  <h3 class="hero__card-title">ما هي الشعب المرجانية؟</h3>
-                  <p class="hero__card-description">
-                    تعتبر الشعب المرجانية في البحر الأحمر مشهدًا ساحرًا ونظاماً بيئياً وبحرياً حيوياً بشكل استثنائي على
-                    مستوى العالم. تتواجد
-                    هذه الشعب المدهشة على طول السواحل في عدة دول، وتقدم مشهدًا بديعًا يذهل العقول بألوانه الزاهية
-                    وأشكاله
-                    الفريدة
-                  </p>
-                  <a href="#" class="hero__card-action"><span>التفاصيل</span></a>
-                </div>
-
-              </div>
+        <div id="hero__banner" class="carousel slide carousel-fade">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="./assets/img/dynamic/slider-1.webp" class="d-block w-100" alt="...">
             </div>
-            <div class="hero__slide-action">
-              <button class="hero__slide-control hero__slide-control--prev" type="button" data-bs-target="#hero__slide"
-                data-bs-slide="prev">
-                <i class="fa-solid fa-chevron-left hero__slide-icon"></i>
-              </button>
-
-
-
-              <div class="carousel-indicators">
-                <button type="button" data-bs-target="#hero__slide" data-bs-slide-to="0"
-                  class="bullets active" aria-current="true" aria-label="Slide 1">
-                  <i class="fa-solid fa-circle"></i>
-                </button>
-                <button type="button" data-bs-target="#hero__slide" data-bs-slide-to="1" class="bullets"
-                  aria-label="Slide 2">
-                  <i class="fa-solid fa-circle"></i>
-                </button>
-                <button type="button" data-bs-target="#hero__slide" data-bs-slide-to="2" class="bullets"
-                  aria-label="Slide 3">
-                  <i class="fa-solid fa-circle"></i>
-                </button>
-              </div>
-
-
-
-              <button class="hero__slide-control hero__slide-control--next" type="button" data-bs-target="#hero__slide"
-                data-bs-slide="next">
-                <i class="fa-solid fa-chevron-right hero__slide-icon"></i>
-              </button>
+            <div class="carousel-item">
+              <img src="./assets/img/dynamic/slider-2.webp" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="./assets/img/dynamic/slider-3.webp" class="d-block w-100" alt="...">
             </div>
           </div>
-
-
         </div>
+      </div>
+      <div class="card">
+
+
+        <div id="hero__slide" class="carousel slide carousel-fade" >
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="hero__card-content">
+                <h3 class="hero__card-title">عن شمس</h3>
+                <p class="hero__card-description">المؤسسة العامة للمحافظة على للشعب المرجانية السلاحف في البحر الأحمر
+                  هي
+                  مؤسسة حكومية سعودية تأسست
+                  بموجب قرار مجلس
+                  الوزراء رقم (٢٥٠) بتاريخ ١٤٤٣/٠٤/٢٥ هجري و تهدف إلى التنظيم والإشراف والمحافظة على الشعب المرجانية
+                  والسلاحف</p>
+                <a href="#" class="hero__card-action">التفاصيل</a>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="hero__card-content">
+                <h3 class="hero__card-title">سلاحف البحر الأحمر</h3>
+                <p class="hero__card-description">عد السلاحف البحرية بلا شك من أبرز الحيوانات رمزية التي تميز الحياة
+                  البحرية في البحر الأحمر، حيث تُبدي روعة وغنى التنوع
+                  البيولوجي التي تزخر به هذا البيئة البحرية، حيث أن السلاحف تُجسد قوة التكيف والصمود في مواجهة
+                  التحديات
+                  المحيطية، بالإضافة
+                  إلى قدرتها عل</p>
+                <a href="#" class="hero__card-action">التفاصيل</a>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="hero__card-content">
+                <h3 class="hero__card-title">ما هي الشعب المرجانية؟</h3>
+                <p class="hero__card-description">
+                  تعتبر الشعب المرجانية في البحر الأحمر مشهدًا ساحرًا ونظاماً بيئياً وبحرياً حيوياً بشكل استثنائي على
+                  مستوى العالم. تتواجد
+                  هذه الشعب المدهشة على طول السواحل في عدة دول، وتقدم مشهدًا بديعًا يذهل العقول بألوانه الزاهية
+                  وأشكاله
+                  الفريدة
+                </p>
+                <a href="#" class="hero__card-action"><span>التفاصيل</span></a>
+              </div>
+
+            </div>
+          </div>
+          <div class="hero__slide-action">
+
+            <button id="prevBtn" class="hero__slide-control hero__slide-control--prev" type="button" data-bs-target="#hero__slide"
+              data-bs-slide="prev">
+              <i class="fa-solid fa-chevron-left hero__slide-icon"></i>
+            </button>
+
+
+            <div class="carousel-indicators" id="carouselNav">
+              <button type="button" data-bs-target="#hero__slide" data-bs-slide-to="0" class="bullets active"
+                aria-current="true" aria-label="Slide 1">
+                <i class="fa-solid fa-circle"></i>
+              </button>
+              <button type="button" data-bs-target="#hero__slide" data-bs-slide-to="1" class="bullets"
+                aria-label="Slide 2">
+                <i class="fa-solid fa-circle"></i>
+              </button>
+              <button type="button" data-bs-target="#hero__slide" data-bs-slide-to="2" class="bullets"
+                aria-label="Slide 3">
+                <i class="fa-solid fa-circle"></i>
+              </button>
+            </div>
+
+
+
+            <button id="nextBtn" class="hero__slide-control hero__slide-control--next" type="button" data-bs-target="#hero__slide"
+              data-bs-slide="next">
+              <i class="fa-solid fa-chevron-right hero__slide-icon"></i>
+            </button>
+          </div>
+        </div>
+
+
+      </div>
     </section>
 
     <section class="links">
@@ -304,7 +317,7 @@
           </div>
 
         </div>
-        
+
     </section>
 
     <section class="pattern">
