--- a/ceo.html
+++ b/ceo.html
@@ -160,37 +160,46 @@
   </header>
 
   <main class="ceo">
-    <h1 class="ceo__title">كلمة الرئيس التنفيذي</h1>
-    <section class="pattern">
-      <video src="./assets/img/dynamic/intro.mp4" class="pattern__video" autoplay muted></video>
-      <img src="./assets/img/dynamic/pattern.svg" alt="">
-    </section>
-    <div class="ceo__details">
-      <div class="ceo__img">
-        <img src="./assets/img/dynamic/ceo.webp" alt="ceo" />
+    <div class="ceo__container">
+      <h1 class="ceo__title">كلمة الرئيس التنفيذي</h1>
+      <section class="pattern">
+        <video src="./assets/img/dynamic/intro.mp4" class="pattern__video" autoplay muted></video>
+        <img src="./assets/img/dynamic/pattern.svg" alt="">
+      </section>
+      <div class="ceo__details">
+        <div class="ceo__img">
+          <img src="./assets/img/dynamic/ceo.webp" alt="ceo" />
+        </div>
+        <div class="ceo__name">
+          <h2>د.خالد بن محمد جميل اصفهاني</h2>
+        </div>
+        <div class="ceo__role">
+          <h3>الرئيس التنفيذي</h3>
+        </div>
       </div>
-      <div class="ceo__name">
-        <h2>د.خالد بن محمد جميل اصفهاني</h2>
-      </div>
-      <div class="ceo__role">
-        <h3>الرئيس التنفيذي</h3>
-      </div>
-    </div>
-    <div class="container">
-      <div class="ceo__description">
-        <p>وضعت المؤسّسة نُصب أعينها بناء كيان راسخ وقادر على تحقيق التميّز في المحافظة على الشُّعب المُرجانية والسلاحف البحرية،
-        وأن يغدو اسم المملكة العربية السعوديّة مميّزا على الخارطة العالميّة في مجالات المحافظة على الشُّعب المرجانيّة والسلاحف،
-        والتخطيط للبرامج والمشاريع وَفق أفضل الممارسات العالميّة، وتنفيذها بأعلى المعايير العالميّة.
-      
-        حيث توجّهت المؤسّسة إلى دراسة الوضع الراهن لحالة الشُّعب المرجانية والسلاحف في البحر الأحمر وتشخيصها، وقامت بتحديد
-        مجموعة من الدراسات والمشاريع ذات المكاسب السريعة والأولويّة القصوى، وذلك للحدّ من تدهور بيئة السلاحف، وأنظمة الشُّعب
-        المرجانية في البحر الأحمر.
+      <div class="container">
+        <div class="ceo__description">
+          <p>وضعت المؤسّسة نُصب أعينها بناء كيان راسخ وقادر على تحقيق التميّز في المحافظة على الشُّعب المُرجانية
+            والسلاحف البحرية،
+            وأن يغدو اسم المملكة العربية السعوديّة مميّزا على الخارطة العالميّة في مجالات المحافظة على الشُّعب
+            المرجانيّة والسلاحف،
+            والتخطيط للبرامج والمشاريع وَفق أفضل الممارسات العالميّة، وتنفيذها بأعلى المعايير العالميّة.
 
-    كما تركز المؤسّسة على بناء الحلول والتقنيات المبتكرة وتطويرها وتنفيذها لمراقبة حالة الشعب المرجانية والسلاحف البحرية
-    وطرق معاينتها وإعادة تأهيلها، وتعتزم المملكة من خلال المؤسّسة تنفيذ العديد من البرامج للمحافظة عليها وتنميتها في البحر
-    الأحمر، ويتجاوز طموحُنا المحافظةَ على ما تبقى من الشعب المرجانية في البحر الأحمر ومناطق تكاثر السلاحف إلى التوسّع في
-    إعادة تأهيل بيئة الشعب المرجانية المتضرّرة، ومواقع تكاثر السلاحف إلى حالتها الطبيعيّة.
-      </p>
+            حيث توجّهت المؤسّسة إلى دراسة الوضع الراهن لحالة الشُّعب المرجانية والسلاحف في البحر الأحمر وتشخيصها، وقامت
+            بتحديد
+            مجموعة من الدراسات والمشاريع ذات المكاسب السريعة والأولويّة القصوى، وذلك للحدّ من تدهور بيئة السلاحف، وأنظمة
+            الشُّعب
+            المرجانية في البحر الأحمر.
+
+            كما تركز المؤسّسة على بناء الحلول والتقنيات المبتكرة وتطويرها وتنفيذها لمراقبة حالة الشعب المرجانية والسلاحف
+            البحرية
+            وطرق معاينتها وإعادة تأهيلها، وتعتزم المملكة من خلال المؤسّسة تنفيذ العديد من البرامج للمحافظة عليها
+            وتنميتها في البحر
+            الأحمر، ويتجاوز طموحُنا المحافظةَ على ما تبقى من الشعب المرجانية في البحر الأحمر ومناطق تكاثر السلاحف إلى
+            التوسّع في
+            إعادة تأهيل بيئة الشعب المرجانية المتضرّرة، ومواقع تكاثر السلاحف إلى حالتها الطبيعيّة.
+          </p>
+        </div>
       </div>
     </div>
   </main>
