--- a/tenders.html
+++ b/tenders.html
@@ -160,174 +160,45 @@
   </header>
 
   <main>
-    <section class="intro">
-      <video src="./assets/img/dynamic/intro.mp4" class="video" autoplay muted loop id="intro-video"></video>
-      <div class="video__bar">
-        <span class="video__bar-total"></span>
-        <span class="video__bar--active"></span>
+    <section class="section-pattern">
+      <div class="section-pattern__pattern">
+      <div class="section-pattern__container">
+        <img src="./assets/img/dynamic/pattern-tree.svg" class="section-pattern__img" alt="">
       </div>
-      <div class="intro__action">
-        <a href="#">
-          <span>كلمة الرئيس التنفيذى</span>
-        </a>
       </div>
-    </section>
-    <section class="hero">
-
-      <div class="hero__banner">
-        <div id="hero__banner" class="carousel slide carousel-fade">
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="./assets/img/dynamic/slider-1.webp" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-              <img src="./assets/img/dynamic/slider-2.webp" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-              <img src="./assets/img/dynamic/slider-3.webp" class="d-block w-100" alt="...">
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="card">
-        <div id="hero__slide" class="carousel slide carousel-fade" >
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <div class="hero__card-content">
-                <h3 class="hero__card-title">عن شمس</h3>
-                <p class="hero__card-description">المؤسسة العامة للمحافظة على للشعب المرجانية السلاحف في البحر الأحمر
-                  هي
-                  مؤسسة حكومية سعودية تأسست
-                  بموجب قرار مجلس
-                  الوزراء رقم (٢٥٠) بتاريخ ١٤٤٣/٠٤/٢٥ هجري و تهدف إلى التنظيم والإشراف والمحافظة على الشعب المرجانية
-                  والسلاحف</p>
-                <a href="#" class="hero__card-action">التفاصيل</a>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <div class="hero__card-content">
-                <h3 class="hero__card-title">سلاحف البحر الأحمر</h3>
-                <p class="hero__card-description">عد السلاحف البحرية بلا شك من أبرز الحيوانات رمزية التي تميز الحياة
-                  البحرية في البحر الأحمر، حيث تُبدي روعة وغنى التنوع
-                  البيولوجي التي تزخر به هذا البيئة البحرية، حيث أن السلاحف تُجسد قوة التكيف والصمود في مواجهة
-                  التحديات
-                  المحيطية، بالإضافة
-                  إلى قدرتها عل</p>
-                <a href="#" class="hero__card-action">التفاصيل</a>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <div class="hero__card-content">
-                <h3 class="hero__card-title">ما هي الشعب المرجانية؟</h3>
-                <p class="hero__card-description">
-                  تعتبر الشعب المرجانية في البحر الأحمر مشهدًا ساحرًا ونظاماً بيئياً وبحرياً حيوياً بشكل استثنائي على
-                  مستوى العالم. تتواجد
-                  هذه الشعب المدهشة على طول السواحل في عدة دول، وتقدم مشهدًا بديعًا يذهل العقول بألوانه الزاهية
-                  وأشكاله
-                  الفريدة
-                </p>
-                <a href="#" class="hero__card-action"><span>التفاصيل</span></a>
-              </div>
-
-            </div>
-          </div>
-          <div class="hero__slide-action">
-
-            <button id="prevBtn" class="hero__slide-control hero__slide-control--prev" type="button" data-bs-target="#hero__slide"
-              data-bs-slide="prev">
-              <i class="fa-solid fa-chevron-left hero__slide-icon"></i>
-            </button>
-
-
-            <div class="carousel-indicators" id="carouselNav">
-              <button type="button" data-bs-target="#hero__slide" data-bs-slide-to="0" class="bullets active"
-                aria-current="true" aria-label="Slide 1">
-                <i class="fa-solid fa-circle"></i>
-              </button>
-              <button type="button" data-bs-target="#hero__slide" data-bs-slide-to="1" class="bullets"
-                aria-label="Slide 2">
-                <i class="fa-solid fa-circle"></i>
-              </button>
-              <button type="button" data-bs-target="#hero__slide" data-bs-slide-to="2" class="bullets"
-                aria-label="Slide 3">
-                <i class="fa-solid fa-circle"></i>
-              </button>
-            </div>
-
-
-
-            <button id="nextBtn" class="hero__slide-control hero__slide-control--next" type="button" data-bs-target="#hero__slide"
-              data-bs-slide="nextt">
-              <i class="fa-solid fa-chevron-right hero__slide-icon"></i>
-            </button>
-          </div>
-        </div>
-
-
+      <div class="section__content container">
+        <h3 class="section__title">عن شمس</h3>
+        <button  onclick="scrollToSection('content')" class="section__btn"><i class="fa-solid fa-chevron-down"></i></button>
       </div>
     </section>
-
-    <section class="links">
-      <div class="container">
-        <div class="links__slide">
-          <h3 class="links__slide-title">روابط مهمة</h3>
-          <div class="row d-flex justify-content-center">
-            <div class="col-12 col-lg-10">
-              <div class="links__slide-container owl-carousel">
-                <div class="links__slide-item">
-                  <a target="_blank" href="#">
-                    <div class="links__slide-item-logo">
-                      <img src="assets/img/dynamic/logo-1.webp" alt="logo" />
-                    </div>
-                    <div class="links__slide-item-title">المديرية العامة لحرس الحدود</div>
-                  </a>
-                </div>
-                <div class="links__slide-item">
-                  <a target="_blank" href="#">
-                    <div class="links__slide-item-logo">
-                      <img src="assets/img/dynamic/logo-2.webp" alt="logo" />
-                    </div>
-                    <div class="links__slide-item-title">الهيئة السعودية للبحر الأحمر</div>
-                  </a>
-                </div>
-                <div class="links__slide-item">
-                  <a target="_blank" href="#">
-                    <div class="links__slide-item-logo">
-                      <img src="assets/img/dynamic/logo-3.webp" alt="logo" />
-                    </div>
-                    <div class="links__slide-item-title">جامعة الملك عبدالله للعلوم والتقنية</div>
-                  </a>
-                </div>
-                <div class="links__slide-item">
-                  <a target="_blank" href="#">
-                    <div class="links__slide-item-logo">
-                      <img src="assets/img/dynamic/logo-4.webp" alt="logo" />
-                    </div>
-                    <div class="links__slide-item-title">نيوم</div>
-                  </a>
-                </div>
-                <div class="links__slide-item">
-                  <a target="_blank" href="#">
-                    <div class="links__slide-item-logo">
-                      <img src="assets/img/dynamic/logo-4.webp" alt="logo" />
-                    </div>
-                    <div class="links__slide-item-title">نيوم</div>
-                  </a>
-                </div>
-              </div>
-
-            </div>
-          </div>
-
-        </div>
-
+    <section>
+      <div class="section__banner">
+        <img src="./assets/img/dynamic/banner.webp" alt="">
+      </div>
+      <div class="bg-mint">
+        <div class="container" >
+        <p class="section__content-text" id="content">المؤسسة العامة للمحافظة على للشعب المرجانية والسلاحف في البحر الأحمر هي مؤسسة حكومية سعودية تأسست بموجب قرار مجلس
+        الوزراء رقم (٢٥٠) بتاريخ ١٤٤٣/٠٤/٢٥ هجري و تهدف إلى التنظيم والإشراف والمحافظة على الشعب المرجانية والسلاحف وأماكن
+        تعشيشها في البحر الأحمر، وإدارتها وإنمائها واستدامتها، والعمل على إعادة تأهيل الشعب المرجانية المتدهورة ومواقع تعشيش
+        السلاحف .وذلك من خلال تسخير الخبرات المحلية والعالمية لتنفيذ حلول مبتكرة لمراقبة وإعادة تأهيل هذه المواطن الطبيعية، بهدف
+        تعزيز مكانة المملكة العربية السعودية كقائد عالمي في الحفاظ على الشعب المرجانية والسلاحف.</p>
+      </div>
+    </div>
     </section>
 
-    <section class="pattern">
-      <video src="./assets/img/dynamic/intro.mp4" class="pattern__video" autoplay muted></video>
-      <img src="./assets/img/dynamic/pattern.svg" alt="">
-    </section>
+      <script>
+        function scrollToSection(sectionId) {
+          var section = document.getElementById(sectionId);
+          if (section) {
+            section.scrollIntoView({
+              behavior: 'smooth',
+              block: 'center'
+            });
+          }
+        }
+      </script>
+
+
   </main>
 
   <footer class="footer-container">
